feat(auth): implement token refresh endpoint (#45)
* feat(auth): add InvalidRefreshTokenException and handler (#22)

* feat(auth): implement AuthenticationService.refresh() with TDD (#22)

* feat(auth): wire up POST /auth/refresh and fix dynamic expiresIn (#22)

* test(auth): add integration tests for token refresh (#22)

* refactor(auth): add explicit sessionRepository.save() in refresh (#22)

Makes the write intent clear and resilient to future changes that might
break JPA dirty checking (e.g., DTO projections or read-only hints).

* test(auth): add GlobalExceptionHandler refresh test and AAA comments (#22)

Add missing unit test for handleInvalidRefreshToken in GlobalExceptionHandlerTest.
Add consistent // Arrange / // Act / // Assert comments to all tests in
AuthenticationServiceTest.

---------

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>